2017-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/logging.c, base/logging.h: Ensure the GPLv2+ license notice
	uses the paragraph suggested by the Free Software Foundation.

2017-02-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tests/, tests/CMakeLists.txt, tests/test-hosts.c: New.
	Moved here from openvas-libraries/base.

	* CMakeLists.txt: Consider directory tests.

2017-02-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* base/proctitle.c (proctitle_set_args): Use strncpy() instead of
	strcpy().

2017-02-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* util/kb.c: Fix file name in Doxygen @file command.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/nvticache.c, util/nvticache.h: New. Moved here from
	openvas-libraries.

	* util/CMakeLists.txt: Handle new module "nvticache" and
	check for hiredis library.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/kb.c, util/kb.h: New. Moved here from openvas-libraries.

	* util/CMakeLists.txt: Handle new module "kb" and
	check for hiredis library.

	* INSTALL: Added hiredis as requirement.

2017-02-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/proctitle.h: Define correct macro to match header guard.

2017-02-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* base/prefs.c (prefs_init): Use g_hash_table_new_full() to free
	duplicated memory on destruction.

2017-02-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/prefs.c, base/prefs.h: New. Moved here from
	openvas-libraries.

	* base/CMakeLists.txt: Handle new module "prefs".

2017-02-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/ldaputils.c, util/ldaputils.h: New. Moved here from
	openvas-libraries.

	* util/CMakeLists.txt: Handle new module "ldaputils" and
	check for ldap library.

	* INSTALL: Added ldap as requirement.

2017-02-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
